syntax = "proto3";
package oauth;

option go_package = "github.com/hopeio/cherry/protobuf/oauth";
option java_package = "xyz.hoper.cherry.protobuf.oauth";

message OauthReq{
    string responseType =1;
    string clientID =2;
    string scope =3;
    string redirectURI =4;
    string state =5;
    string userID =6;
    int64 accessTokenExp =7;
    string clientSecret =11;
    string code =12;
    string refreshToken =13;
    string grantType = 14;
    string accessType = 15;
    string loginURI = 16;
}

message Client{
    string ID = 1;
    string secret = 2;
    string domain = 3;
    string userID = 4;
}